home css fix, login-signup alignment

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -12,4 +12,5 @@ footer {
 h5 {
     color: white;
     text-shadow: 0.4vh 0 0 #00a307;
+    letter-spacing: 1px;
 }
